--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="assets/css/styles.css">
+    <script type="module" src="assets/js/firebase.js"></script>
     <script src="assets/js/script.js"></script>
+    <!-- Debe ser type = module -->
 </head>
 <body>
-    <h1>Hola</h1>
+    <input type="text" id="nombre" placeholder="Ingresa tu nombre" name="nombre">
+    <button id="btnRegistrar">Registrar</button>
 </body>
 </html>
