Proceso casi completo
Ya se realiza el registro pero el usuario no lo tiene claro.

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
     <link rel="stylesheet" href="assets/css/styles.css">
     <script type="module" src="assets/js/firebase.js"></script>
-    <script src="assets/js/script.js"></script>
-    <!-- Debe ser type = module -->
+    <script type="module" src="assets/js/script.js"></script>
+    <!-- Debe ser type = module (cuándo son importaciones/exportaciones) -->
 </head>
 <body>
     <input type="text" id="nombre" placeholder="Ingresa tu nombre" name="nombre">
