--- a/index.html
+++ b/index.html
@@ -10,7 +10,27 @@
     <!-- Debe ser type = module (cuándo son importaciones/exportaciones) -->
 </head>
 <body>
-    <input type="text" id="nombre" placeholder="Ingresa tu nombre" name="nombre">
-    <button id="btnRegistrar">Registrar</button>
+    <div class="boxdiv"> 
+        <form> 
+
+            <label for="nombre">Ingresa tu nombre</label>
+            <input type="text" id="nombre" placeholder="Ingresa tu nombre" name="nombre">
+            
+            <label for="apellido">Ingresa tu apellido</label>
+            <input type="text" id="apellido" placeholder="Ingresa tu apellido" name="apellido">
+
+            <label for="fnacimiento">Ingresa tu fecha de nacimiento</label>
+            <input type="date" id="fnacimiento" placeholder="Ingresa tu fecha de nacimiento" name="fnacimiento">
+
+            <label for="rut">Ingresa tu rut</label>
+            <input type="text" id="rut" placeholder="Ingresa tu rut" name="rut">
+
+            <label for="correo">Ingresa tu correo</label>
+            <input type="email" id="correo" placeholder="Ingresa tu correo" name="correo">
+
+            <button id="btnRegistrar">Registrar</button>
+
+        </form>
+    </div>
 </body>
 </html>
