--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <label for="correo">Ingresa tu correo</label>
             <input type="email" id="correo" placeholder="Ingresa tu correo" name="correo">
 
-            <button id="btnRegistrar">Registrar</button>
+            <button type="button" id="btnRegistrar">Registrar</button>
 
         </form>
     </div>
